[package]
name = "chess2"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2018"

[features]
tuning = ["shakmaty", "pgn-reader", "bitvec", "serde", "rmp-serde"]

[dependencies]
rand = "0.8"
# packed_simd = { version = "0.3", package = "packed_simd_2", features = ["into_bits"] }
# packed_simd = { version = "0.3", features = ["into_bits"] }
lazy_static = "1.5"

shakmaty = { version = "0.27", optional = true }
pgn-reader = { version = "0.26", optional = true }
bitvec = { version = "1.0", optional = true, features=["serde"] }
serde = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
